# oncall_cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODING_PRINCIPLES.md  IMPLEMENT.md  README.md  pyproject.toml
.claude/skills/oncall-investigation/: SKILL.md
docs/: case_knowledge_schema.md  design.md  design_cn.md  embedding_knowledge_test.md  project_test_guide.md
skills/diagnose-ck-not-correct/: SKILL.md  skill.yaml
skills/diagnose-ck-not-correct/tests/: cases.yaml
src/oncall_cli/: __init__.py  case_store.py  cli.py  embeddings.py  engine.py  knowledge.py  knowledge_cli.py  models.py  registry.py  reporter.py  router.py
tests/: test_claude_integration.py  test_cli_flow.py  test_knowledge.py  test_registry.py  test_router.py
