[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "oncall_cli"
version = "0.1.0"
description = "A minimal local, skill-routed oncall agent skeleton"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
oncall_cli = "oncall_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
